stryker/Metadata/unpackaged/objects/Employe__c.object
<CustomObject>
    <fields>
        <fullName>Amount__c</fullName>
        <label>Amount</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Employ_Id__c</fullName>
        <label>Employ Id</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Employe_Name__c</fullName>
        <label>Employe Name</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Enquiry__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Enquiry</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Total_salary__c</fullName>
        <label>Total salary</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <label>Employe</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Employe Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Employes</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>